--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   mime: ^1.0.5
   http_parser: ^4.0.2
   image_picker: ^1.1.2
+  shared_preferences: ^2.2.3
+  intl: ^0.19.0
+  file_picker: ^8.0.5
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
