--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   shared_preferences: ^2.2.3
   intl: ^0.19.0
   file_picker: ^8.0.5
+  flutter_pdfview: ^1.3.2
+  syncfusion_flutter_pdfviewer: ^20.4.54
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
