--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^20.4.54
   path_provider: ^2.1.4
   url_launcher: ^6.3.0
+  motion_tab_bar: ^2.0.4
+  motion_tab_bar_v2: ^0.3.0
 
 dev_dependencies:
   flutter_test:
